<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mozgalica.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_anagramFragment"
            app:destination="@id/anagramFragment" />
        <action
            android:id="@+id/action_nav_home_to_memoryGameFragment"
            app:destination="@id/memoryGameFragment" />
        <action
            android:id="@+id/action_nav_home_to_mathQuizFragment"
            app:destination="@id/mathQuizFragment" />
        <action
            android:id="@+id/action_nav_home_to_nav_game_details"
            app:destination="@id/nav_game_details" />
    </fragment>

    <fragment
        android:id="@+id/nav_game_history"
        android:name="com.example.mozgalica.ui.gameHistory.GameHistoryFragment"
        android:label="@string/menu_game_history"
        tools:layout="@layout/fragment_game_history" />

    <fragment
        android:id="@+id/nav_game_details"
        android:name="com.example.mozgalica.ui.gameDetails.GameDetailsFragment"
        android:label="@string/menu_game_details"
        tools:layout="@layout/fragment_game_details" >
        <action
            android:id="@+id/action_nav_game_details_to_detailsPerGameFragment"
            app:destination="@id/detailsPerGameFragment" />
    </fragment>


    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.mozgalica.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.mozgalica.ui.logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout" />


    <fragment
        android:id="@+id/anagramFragment"
        android:name="com.example.mozgalica.AnagramFragment"
        android:label="@string/anagrams"
        tools:layout="@layout/fragment_anagram" />
    <fragment
        android:id="@+id/memoryGameFragment"
        android:name="com.example.mozgalica.MemoryGameFragment"
        android:label="@string/memory"
        tools:layout="@layout/fragment_memory_game" />
    <fragment
        android:id="@+id/mathQuizFragment"
        android:name="com.example.mozgalica.MathQuizFragment"
        android:label="@string/math"
        tools:layout="@layout/fragment_math_quiz" />
    <fragment
        android:id="@+id/detailsPerGameFragment"
        android:name="com.example.mozgalica.DetailsPerGameFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_details_per_game" />
</navigation>