<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <Button
        android:id="@+id/btn_math_quiz"
        android:layout_width="235dp"
        android:layout_height="75dp"
        android:text="@string/math"
        style="@style/CustomMaterialButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <Button
        android:id="@+id/btn_anagrams"
        style="@style/CustomMaterialButtonStyle"
        android:layout_width="235dp"
        android:layout_height="75dp"
        android:text="@string/anagrams"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_math_quiz"
        app:layout_constraintVertical_bias="0.132" />

    <Button
        android:id="@+id/btn_memory_game"
        style="@style/CustomMaterialButtonStyle"
        android:layout_width="235dp"
        android:layout_height="75dp"
        android:text="@string/memory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_anagrams"
        app:layout_constraintVertical_bias="0.199" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextViewStyle"
        android:layout_width="217dp"
        android:layout_height="84dp"
        android:gravity="center"
        android:text="@string/choose_game"
        app:layout_constraintBottom_toTopOf="@+id/btn_math_quiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727" />

</androidx.constraintlayout.widget.ConstraintLayout>